--- a/frontend/src/components/InventoryTracker.module.css
+++ b/frontend/src/components/InventoryTracker.module.css
@@ -4,7 +4,7 @@
   text-align: center;
   margin-bottom: 0;
   font-size: 2rem;
-  padding: 15px 0;
+  padding-bottom: 15px;
 }
 
 .headerContainer {
